--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/main-subpage.css">
     <link rel="stylesheet" href="./styles/res-380px.css">
+    <link rel="stylesheet" href="./styles/res-500px.css">
     <link rel="stylesheet" href="./styles/res-700px.css">
     <link rel="stylesheet" href="./styles/res-950px.css">
     <link rel="stylesheet" href="./styles/res-1150px.css">
@@ -51,19 +52,13 @@
 
         <div id="top-bar"><span></span></div>
 
-        <main>
+        <main class="contact">
 
-            <picture>
-                <!-- <source media="(min-width: 700px)" srcset="./images/about-large.png">
-                <source media="(min-width: 360px)" srcset="./images/about-medium.jpg">
-                <img src="./images/about-small.jpg" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim"> -->
-
+            <!-- <picture>
                 <source media="(min-width: 1150px)" srcset="./images/contact-large.jpg"> 
 
                 <img src="./images/contact-small.jpg" alt="Bana ulaşın!">
-
-                <!-- <img src="../images/istanbul-large.jpg" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim"> -->
-            </picture>
+            </picture> -->
 
             <h1><span>İletişim</span></h1>
             
