--- a/furniture.html
+++ b/furniture.html
@@ -54,20 +54,11 @@
 
         <div id="top-bar"><span></span></div>
 
-        <main>
+        <main class="furniture">
 
-            <picture>
-                <!-- <source media="(min-width: 700px)" srcset="./images/about-large.png">
-                <source media="(min-width: 360px)" srcset="./images/about-medium.jpg">
-                <img src="./images/about-small.jpg" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim"> -->
-
-                <!-- <img src="../images/about-large.png" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim"> 
-
-             <source media="(min-width: 1150px)" srcset="../images/about-large.jpg">-->
+            <!-- <picture>
                 <img src="./images/furniture.jpg" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim">
-             <!--<img src="../images/about-small.jpg" alt="Bir kafede otururken resmim">
-
-         --></picture>
+            </picture> -->
 
             <h1><span>Mobilyalar</span></h1>
             
