--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/main-subpage.css">
     <link rel="stylesheet" href="./styles/res-380px.css">
+    <link rel="stylesheet" href="./styles/res-500px.css">  <!--  yeni -->
     <link rel="stylesheet" href="./styles/res-700px.css">
     <link rel="stylesheet" href="./styles/res-950px.css">
     <link rel="stylesheet" href="./styles/res-1150px.css">
@@ -53,25 +54,19 @@
 
         <div id="top-bar"><span></span></div>
 
-        <main>
+        <main class="about">
 
-            <picture>
-                <!-- <source media="(min-width: 700px)" srcset="./images/about-large.png">
-                <source media="(min-width: 360px)" srcset="./images/about-medium.jpg">
-                <img src="./images/about-small.jpg" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim"> -->
-
-                <!-- <img src="../images/about-large.png" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim"> 
-
-             <source media="(min-width: 1150px)" srcset="../images/about-large.jpg">-->
+            <!-- <picture>
                 <img src="./images/about-large-old.png" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim">
-             <!--<img src="../images/about-small.jpg" alt="Bir kafede otururken resmim">
-
-         --></picture>
+            </picture> -->
 
             <h1><span>Hakkında</span></h1>
             
             <p>
                 1989'da Bursa'da doğdu. Bursa Güzel Sanatlar Lisesi Resim bölümünü bitirdikten sonra Mimar Sinan Güzel Sanatlar Üniversitesi, Endüstri Ürünleri Tasarımı bölümünü okuyarak eğitimini tamamladı. İberba markası altında birçok tasarıma imza attı. Çeşitli firmalara da tasarım hizmeti veren tasarımcı, küçük yaşlardan itibaren sanatla ilgili birçok karma sergi ve workshoplara katıldı.
+            </p>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat soluta aliquam distinctio quasi odit nostrum fugiat quidem eum nobis, dolor, totam dolores magnam, expedita corporis ad temporibus rem est obcaecati?
             </p>
 
             <footer><span class="copy">Özlem Yeşildal Başar &copy; 2022</span></footer>
