--- a/industrial-design.html
+++ b/industrial-design.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./styles/main-subpage.css">
     <link rel="stylesheet" href="./styles/modal.css">
     <link rel="stylesheet" href="./styles/res-380px.css">
+    <link rel="stylesheet" href="./styles/res-500px.css">
     <link rel="stylesheet" href="./styles/res-700px.css">
     <link rel="stylesheet" href="./styles/res-950px.css">
     <link rel="stylesheet" href="./styles/res-1150px.css">
@@ -54,20 +55,11 @@
 
         <div id="top-bar"><span></span></div>
 
-        <main>
+        <main class="industrial-design">
 
-            <picture>
-                <!-- <source media="(min-width: 700px)" srcset="./images/about-large.png">
-                <source media="(min-width: 360px)" srcset="./images/about-medium.jpg">
-                <img src="./images/about-small.jpg" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim"> -->
-
-                <!-- <img src="../images/about-large.png" alt="Eski bir Osmanlı evinin merdivenlerindeki resmim"> 
-
-             <source media="(min-width: 1150px)" srcset="../images/about-large.jpg">-->
+            <!-- <picture>
                 <img src="./images/industrial-design.jpg" alt="">
-             <!--<img src="../images/about-small.jpg" alt="Bir kafede otururken resmim">
-
-         --></picture>
+            </picture> -->
 
             <h1><span>Ürün Tasarımları</span></h1>
 
