--- a/contact.html
+++ b/contact.html
@@ -54,15 +54,9 @@
 
         <main class="contact">
 
-            <!-- <picture>
-                <source media="(min-width: 1150px)" srcset="./images/contact-large.jpg"> 
-
-                <img src="./images/contact-small.jpg" alt="Bana ulaşın!">
-            </picture> -->
-
             <h1><span>İletişim</span></h1>
             
-            <form action="h"><!--  
+            <form action="#"><!--  
                 
              --><input type="text" placeholder="İsim"><!-- 
 
