--- a/about.html
+++ b/about.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/main-subpage.css">
     <link rel="stylesheet" href="./styles/res-380px.css">
-    <link rel="stylesheet" href="./styles/res-500px.css">  <!--  yeni -->
     <link rel="stylesheet" href="./styles/res-700px.css">
     <link rel="stylesheet" href="./styles/res-950px.css">
     <link rel="stylesheet" href="./styles/res-1150px.css">
@@ -56,7 +55,7 @@
 
         <main class="about">
 
-            <h1><span>Hakkında</span></h1>
+            <h1><span>HAKKINDA</span></h1>
             
             <p>
                 1989'da Bursa'da doğdu. Bursa Güzel Sanatlar Lisesi Resim bölümünü bitirdikten sonra Mimar Sinan Güzel Sanatlar Üniversitesi, Endüstri Ürünleri Tasarımı bölümünü okuyarak eğitimini tamamladı. İberba markası altında birçok tasarıma imza attı. Çeşitli firmalara da tasarım hizmeti veren tasarımcı, küçük yaşlardan itibaren sanatla ilgili birçok karma sergi ve workshoplara katıldı.
