--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/main-subpage.css">
     <link rel="stylesheet" href="./styles/res-380px.css">
-    <link rel="stylesheet" href="./styles/res-500px.css">
     <link rel="stylesheet" href="./styles/res-700px.css">
     <link rel="stylesheet" href="./styles/res-950px.css">
     <link rel="stylesheet" href="./styles/res-1150px.css">
@@ -54,7 +53,7 @@
 
         <main class="contact">
 
-            <h1><span>İletişim</span></h1>
+            <h1><span>İLETİŞİM</span></h1>
             
             <form action="#"><!--  
                 
