--- a/furniture.html
+++ b/furniture.html
@@ -56,7 +56,7 @@
 
         <main class="furniture">
 
-            <h1><span>Mobilyalar</span></h1>
+            <h1><span>MOBİLYALAR</span></h1>
             
             <img src="./images/furniture/furniture-1.jpeg" alt="Mobilya 1" class="showroom" data-description="Birinci mobilya. Fiyatı şu kadar. Büyüklüğü de şu kadar. Hepsi aha bu kadar.">
 
@@ -85,6 +85,8 @@
             <img src="./images/furniture/furniture-13.jpeg" alt="Onüçüncü mobilya" class="showroom" data-description="Mobilya. Fiyatı şu kadar. Büyüklüğü de şu kadar. Hepsi aha bu kadar. Biraz blabalbaba lbaba balbal vsvs v svs. Biraz daha açıklama">
 
             <img src="./images/furniture/furniture-14.jpeg" alt="Ondördüncü mobilya" class="showroom" data-description="Mobilya. Fiyatı şu kadar. Büyüklüğü de şu kadar. Hepsi aha bu kadar. Biraz blabalbaba lbaba balbal vsvs v svs. Biraz daha açıklama">
+
+            <img src="./images/furniture/furniture-15.jpeg" alt="Onbeşinci mobilya" class="showroom" data-description="Mobilya. Fiyatı şu kadar. Büyüklüğü de şu kadar. Hepsi aha bu kadar. Biraz blabalbaba lbaba balbal vsvs v svs. Biraz daha fazla fazla açıklama">
 
             <img src="./images/furniture/furniture-16.jpeg" alt="Onaltıncı mobilya" class="showroom" data-description="Mobilya. Fiyatı şu kadar. Büyüklüğü de şu kadar. Hepsi aha bu kadar. Biraz blabalbaba lbaba balbal vsvs v svs. Biraz daha açıklama">
 
