--- a/industrial-design.html
+++ b/industrial-design.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="./styles/main-subpage.css">
     <link rel="stylesheet" href="./styles/modal.css">
     <link rel="stylesheet" href="./styles/res-380px.css">
-    <link rel="stylesheet" href="./styles/res-500px.css">
     <link rel="stylesheet" href="./styles/res-700px.css">
     <link rel="stylesheet" href="./styles/res-950px.css">
     <link rel="stylesheet" href="./styles/res-1150px.css">
@@ -57,7 +56,7 @@
 
         <main class="industrial-design">
 
-            <h1><span>Ürün Tasarımları</span></h1>
+            <h1><span>ÜRÜN TASARIMLARI</span></h1>
 
             <img src="./images/industrial-design/design-1.jpeg" alt="Ürün tasarımı 1" class="showroom" data-description="Birinci ürün. Amaç şu. Şu işe yarar. Bazen şu işe yarar. Şuna yaramaz.">
 
