--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mobilya ve Endüstri Ürünleri Tasarımları Portfolyo">
     <meta name="author" content="Doruk Başar">
-    <title>Özlem Yeşildal Başar</title>
+    <title>Özlem Yeşildal Başar - Mobilya ve Endüstri Ürünleri Tasarımları</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,9 +52,27 @@
 
         <main>
 
-            <div id="content-logo" class="logo"><span>Özlem</span><span>Yeşildal Başar</span></div>
+            <div id="content-logo" class="logo">
+                <span>Özlem</span><span>Yeşildal Başar</span>
+            </div>
 
-            <div class="image-div"></div>
+            <!-- <div class="image-div"></div> -->
+
+            <div id="hero-header">
+                <div class="image-div"></div>
+                <div id="hero-link" class="fade">
+                    <a href="/industrial-design.html">
+                        <span>Ürün</span>
+                        <span></span>
+                        <span>Tasarımları</span>
+                    </a>
+                </div>
+            </div>
+
+            <div id="home-copy">
+                <span id="home-copy-small">&copy; 2022</span>
+                <span id="home-copy-large">Özlem Yeşildal Başar &copy; 2022</span>
+            </div>
 
         </main>
 
