--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             <!-- <div class="image-div"></div> -->
 
             <div id="hero-header">
+                <div class="image-div active"></div>
+                <div class="image-div"></div>
+                <div class="image-div"></div>
                 <div class="image-div"></div>
                 <div id="hero-link" class="fade">
                     <a href="/industrial-design.html">
