--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- <div class="image-div"></div> -->
 
             <div id="hero-header">
-                <div class="image-div active"></div>
+                <div class="image-div" style="opacity: 1;"></div>
                 <div class="image-div"></div>
                 <div class="image-div"></div>
                 <div class="image-div"></div>
