--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                 </a>
             </div>
 
-            <div id="home-copy">
+            <footer>
                 <span id="home-copy-small">&copy; 2022</span>
-                <span id="home-copy-large">Özlem Yeşildal Başar &copy; 2022</span>
-            </div>
+                <span id="home-copy-large">Özlem Yeşildal Başar &copy; 2022</span>    
+            </footer>
 
         </main>
 
