--- a/pagenavigation.html
+++ b/pagenavigation.html
@@ -39,7 +39,6 @@
             position: fixed;
             top: 0;
             width: 100%;
-            display: flex;
             justify-content: space-between;
             background-color: #eee;
         }
@@ -50,16 +49,21 @@
             bottom: 0;
             left: 0;
             height: 3px;
-            //width: 100%;
+            /* width: 100%; */
             background-color: #579;
         }
         
         nav {
+            max-width: 360px;
+            margin: auto;
             display: flex;
+            justify-content: space-evenly;
         }
         nav > * {
-            padding: 15px;
-            //margin-left: 20px;
+            flex-basis: 20%;
+            padding: 15px 0;
+            text-align: center;
+            /* margin-left: 20px; */
             border-top: 3px solid transparent;
             border-bottom: 3px solid transparent;
         }
@@ -86,7 +90,6 @@
 </head>
 <body>
     <header>
-        <div id="logo">Zımbırtı</div>
         <nav>
             <a href="#first-subdivision">First</a>
             <a href="#second-subdivision">Second</a>
@@ -184,7 +187,7 @@
 
     <script type="text/javascript">
 
-const logo = document.getElementById('logo');
+//const logo = document.getElementById('logo');
 const main = document.querySelector('main');
 const firstSubdivision = document.getElementById('first-subdivision');
 const secondSubdivision = document.getElementById('second-subdivision');
@@ -205,7 +208,7 @@ function loreley() {
     let gradient = height - document.body.clientHeight;
     let location = Math.ceil(place); 
     let percent = location / gradient * 100;
-    logo.innerText = place + ' ' ;
+    //logo.innerText = place + ' ' ;
 
     document.querySelector('header .bottom').style.width = percent + '%';
 
@@ -217,7 +220,7 @@ function loreley() {
 
     if (place >= firstSubdivision.offsetTop &&
         place < secondSubdivision.offsetTop - 10) {
-        logo.innerText += ' ' + firstSubdivision.getBoundingClientRect().top;
+        //logo.innerText += ' ' + firstSubdivision.getBoundingClientRect().top;
         links[0].style.borderTopColor = 'red';
     } else if (place >= secondSubdivision.offsetTop - 10 &&
                place < thirdSubdivision.offsetTop - 10) {
