--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <li>
             <a href="adem.html">Adem'in Uygulaması</a>
         </li>
+        <li>
+            <a href="https://ozlemyb.github.io/">Özlem</a>
+        </li>
     </ul>
 </body>
 </html>
