--- a/snippets/horizontal-flex-masonry/index.html
+++ b/snippets/horizontal-flex-masonry/index.html
@@ -73,6 +73,12 @@
             }
         }
 
+        @media screen and (max-width: 500px) {
+            figure.last {
+                display: none;
+            }
+        }
+
         
 
     </style>
