--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="author" content="Doruk Başar">
     <meta name="description" content="Doruk Başar liste halinde portfolyo1">
     <title>Doruk Başar Portfolyo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body class="container my-5">
     <ul>
         <li>
             <a href="numbergame.html">Sayı Oyunu</a>
