Spermiyogram tablosu sayfası eklendi

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a href="adem.html">Adem'in Uygulaması</a>
         </li>
         <li>
+            <a href="spermiyogram.html">Spermiyogram Hesaplamaları</a>
+        </li>
+        <li>
             <a href="https://ozlemyb.github.io/">Özlem</a>
         </li>
     </ul>
