--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <a href="spermiyogram.html">Spermiyogram Hesaplamaları</a>
         </li>
         <li>
+            <a href="ozan.html">Ozan</a>
+        </li>
+        <li>
             <a href="https://ozlemyb.github.io/">Özlem</a>
         </li>
     </ul>
