--- a/ozan.html
+++ b/ozan.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<title>Ozan sayfa</title>
-<style>
+	<title>Ozan sayfa</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
 
 body {
 	padding: 40px;
@@ -15,14 +16,14 @@ button {
 	cursor: pointer;
 }
 
-</style>
+	</style>
 </head>
 
 <body>
 
-<button id="buton">Sayfaya başka renk lazım</button>
+	<button id="buton">Sayfaya başka renk lazım</button>
 
-<script>
+	<script>
 
 const buton = document.getElementById("buton");
 
@@ -60,7 +61,7 @@ buton.addEventListener("click", ()=> {
 
 
 
-</script>
+	</script>
 
 </body>
 </html>
